--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="holder">
       <div class="container">
       <div class="row">
-         <div class="col-sm-2">
+         <div class="col-lg-1">
             <div class="icon-holder">
             <div class="icon-1">
                <i class="fa fa-bars"></i>
@@ -38,15 +38,19 @@
                <div class="img-1">
                   <img src="https://images.unsplash.com/photo-1623251609314-97cc1f84e3ed?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"
                      alt="">
-                  <h1 id="muam">Muwahib Abdirahman</h1>
-                  <h4 id="dev" style="color: #90EE90;">Developer</h4>
+                     <div class="info">
+                        <h1 id="muam">Muwahib Abdirahman</h1>
+                        <h4 id="dev" style="color: #90EE90;">Developer</h4>
+                        <div class="cont">
+                           <i class="fa-brands fa-square-facebook"></i>
+                           <i class="fa-brands fa-square-twitter"></i>
+                           <i class="fa-brands fa-linkedin"></i>
+                           <i class="fa-brands fa-behance"></i>
+                        </div>
+                     </div>
+                 
                </div>
-               <div class="cont">
-                  <i class="fa-brands fa-square-facebook"></i>
-                  <i class="fa-brands fa-square-twitter"></i>
-                  <i class="fa-brands fa-linkedin"></i>
-                  <i class="fa-brands fa-behance"></i>
-               </div>
+               
             </div>
          </div>
          <div class="col-lg-5">
@@ -73,48 +77,48 @@
                         <div id="development">
                            <div class="icon">
                               <i class="fa fa-tv" style="color: #90EE90;"></i>
+                              <h4 id>Development</h4>
+                              <p>Lorem ipsum dolor sit amet consectetur
+                                 adipisicing elit.Nesciunt dicta rem,
+                                 maiores ratione,
+                              </p>
                            </div>
-                           <h4 id>Development</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur
-                              adipisicing elit.Nesciunt dicta rem,
-                              maiores ratione,
-                           </p>
                         </div>
                      </li>
                      <li>
                         <div id="optimization">
                            <div class="icon">
                               <i class="fa fa-shuttle-space" style="color: #90EE90;"></i>
+                              <h4>SEO Optimization</h4>
+                              <p>Lorem ipsum dolor sit amet consectetur
+                                 adipisicing elit.Nesciunt dicta rem,
+                                 maiores ratione,
+                              </p>
                            </div>
-                           <h4>SEO Optimization</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur
-                              adipisicing elit.Nesciunt dicta rem,
-                              maiores ratione,
-                           </p>
                         </div>
                      </li>
                      <li>
                         <div id="database">
                            <div class="icon" style="color: #90EE90;">
                               <i class="fa fa-database"></i>
+                              <h4>Data Base</h4>
+                              <p>Lorem ipsum dolor sit amet consectetur
+                                 adipisicing elit.Nesciunt dicta rem,
+                                 maiores ratione,
+                              </p>
                            </div>
-                           <h4>Data Base</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur
-                              adipisicing elit.Nesciunt dicta rem,
-                              maiores ratione,
-                           </p>
                         </div>
                      </li>
                      <li>
                         <div id="datasecurity">
                            <div class="icon">
                               <i class="fa fa-user-shield" style="color: #90EE90;"></i>
+                              <h4>Data Security</h4>
+                              <p>Lorem ipsum dolor sit amet consectetur
+                                 adipisicing elit.Nesciunt dicta rem,
+                                 maiores ratione,
+                              </p>
                            </div>
-                           <h4>Data Security</h4>
-                           <p>Lorem ipsum dolor sit amet consectetur
-                              adipisicing elit.Nesciunt dicta rem,
-                              maiores ratione,
-                           </p>
                         </div>
                      </li>
                   </ul>
